--- a/src/client/ba/partials/layout/top.html
+++ b/src/client/ba/partials/layout/top.html
@@ -1,4 +1,4 @@
-<html>
+<html class="gw">
 
 <head>
     <meta charset="utf8" />
@@ -6,7 +6,7 @@
     <meta name="description" content="JA/Misitioba is a personal digital brand that offers freelance software development with full stack javascript engineering in Barcelona and Paris." />
     <meta name="author" content="Javier Arancibia" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>JA / MisitioBA - web development - barcelona - paris</title>
+    <title>{{htmlTitle}}</title>
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -49,7 +49,7 @@
     <!-- Return to Top -->
     <a href="javascript:" id="return-to-top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
 
-    <div id="wrap">
+    <div id="wrap" class="container">
         <div class="container-fluid">
             {{> header}}
         </div>
