--- a/src/client/ba/partials/social-icons.html
+++ b/src/client/ba/partials/social-icons.html
@@ -3,25 +3,21 @@
         <div class="col-lg-12">
             <div class="social-panel">
                 <div class="row">
-                    <div class="col-sm-3">
-                        <a href="https://www.linkedin.com/in/arancibiajav" target="_blank">
-                            <div class="social-icon icon-linkedin center-block"></div>
-                        </a>
-                    </div>
-                    <div class="col-sm-3">
-                        <a href="https://www.facebook.com/javoche" target="_blank">
-                            <div class="social-icon icon-facebook center-block"></div>
-                        </a>
-                    </div>
-                    <div class="col-sm-3">
-                        <a href="https://twitter.com/javimosch" target="_blank">
-                            <div class="social-icon icon-twitter center-block"></div>
-                        </a>
-                    </div>
-                    <div class="col-sm-3">
-                        <a href="https://www.instagram.com/javoche/?hl=es" target="_blank">
-                            <div class="social-icon icon-instagram center-block"></div>
-                        </a>
+                    <div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+                        <div class="social-icon-wrapper">
+                            <a href="https://www.linkedin.com/in/arancibiajav" target="_blank">
+                                <div class="social-icon icon-linkedin center-block"></div>
+                            </a>
+                            <a href="https://www.facebook.com/javoche" target="_blank">
+                                <div class="social-icon icon-facebook center-block"></div>
+                            </a>
+                            <a href="https://twitter.com/javimosch" target="_blank">
+                                <div class="social-icon icon-twitter center-block"></div>
+                            </a>
+                            <a href="https://www.instagram.com/javoche/?hl=es" target="_blank">
+                                <div class="social-icon icon-instagram center-block"></div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
