--- a/src/client/ba/css/footer.css
+++ b/src/client/ba/css/footer.css
@@ -3,8 +3,8 @@
     font-size: 20px;
     color: black;
     font-weight: 900;
-    line-height: 30px;
-    padding: 10px 20px;
+    line-height: 60px;
+    padding: 0px 00px;
     margin: 0px;
     text-align: center;
 }
@@ -43,13 +43,11 @@
 @media only screen and (min-width: 992px) {
  
     .footer__text {
-        line-height: 100px;
-        padding: 0px;
-        text-align: left;
     }
 
     .footer__text-right {
         float: right;
+        padding: 0px 10px 0px 0px;
     }
 }
 
