--- a/src/client/ba/css/header.css
+++ b/src/client/ba/css/header.css
@@ -3,10 +3,10 @@ header {
 }
 
 .header__col {
-    background-color: white;
-    padding-left: 20px;
-    border-radius: 50px;
-    width: 250px;
+    /* background-color: white; */
+    /* padding-left: 20px; */
+    /* border-radius: 50px; */
+    /* width: 250px; */
     position: relative;
     z-index: 2;
 }
@@ -52,11 +52,11 @@ header {
     vertical-align: top;
     margin: 0px;
     font-family: Nunito, sans-serif;
-    font-size: 25px;
+    font-size: 35px;
     color: black;
     padding-top: 0px;
     padding-left: 20px;
-    font-weight: bolder;
+    font-weight: 100;
 }
 
 @media only screen and (min-width: 320px) {
