--- a/src/client/ba/css/layout.css
+++ b/src/client/ba/css/layout.css
@@ -1,11 +1,59 @@
-.container-fluid, .container {
+.container-fluid,
+.container {
     padding-right: 0px;
     padding-left: 0px;
     margin-right: auto;
     margin-left: auto;
 }
 
-.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+.col-lg-1,
+.col-lg-10,
+.col-lg-11,
+.col-lg-12,
+.col-lg-2,
+.col-lg-3,
+.col-lg-4,
+.col-lg-5,
+.col-lg-6,
+.col-lg-7,
+.col-lg-8,
+.col-lg-9,
+.col-md-1,
+.col-md-10,
+.col-md-11,
+.col-md-12,
+.col-md-2,
+.col-md-3,
+.col-md-4,
+.col-md-5,
+.col-md-6,
+.col-md-7,
+.col-md-8,
+.col-md-9,
+.col-sm-1,
+.col-sm-10,
+.col-sm-11,
+.col-sm-12,
+.col-sm-2,
+.col-sm-3,
+.col-sm-4,
+.col-sm-5,
+.col-sm-6,
+.col-sm-7,
+.col-sm-8,
+.col-sm-9,
+.col-xs-1,
+.col-xs-10,
+.col-xs-11,
+.col-xs-12,
+.col-xs-2,
+.col-xs-3,
+.col-xs-4,
+.col-xs-5,
+.col-xs-6,
+.col-xs-7,
+.col-xs-8,
+.col-xs-9 {
     position: relative;
     min-height: 1px;
     padding-right: 0px;
@@ -39,13 +87,20 @@
     }
 }
 
-html, body {
+html {
+    background-color: black;
+}
+
+html,
+body {
     height: 100%;
-    background-color: white;
     font-family: Nunito, sans-serif;
     background-size: cover;
-    background-position-y: 100px;
     background-repeat: no-repeat;
+}
+
+body {
+    background-color: transparent;
 }
 
 #wrap {
@@ -53,12 +108,14 @@ html, body {
     height: auto;
     margin: 0px auto -100px;
     padding: 0px 0px 100px;
-    background: url("/img/bg.jpg") 0% 0% / cover;
+    /*background: url("/img/bg.jpg") 0% 0% / cover;*/
 }
 
 #footer {
     height: 100px;
+    background-color:white;
 }
+
 .footer {
-    background-color: rgb(240, 248, 255);
+    
 }
