--- a/src/client/ba/css/particles.css
+++ b/src/client/ba/css/particles.css
@@ -1,7 +1,8 @@
 #particles-js {
     position: absolute;
-    z-index: 0;
+    z-index: -1;
     width: 100%;
     height: 100%;
     top: 0px;
+    left: 0px;
 }
