--- a/src/client/ba/partials/layout/footer.html
+++ b/src/client/ba/partials/layout/footer.html
@@ -1,17 +1,15 @@
-{{>social-icons}}
+
 <div class="footer">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-12">
                 <p class="footer__text">
-                    arancibiajav@gmail.com
-                </p>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <p class="footer__text footer__text-right">
                     freelancing proudly since 2015
                 </p>
             </div>
+        </div>
+        <div class="row">
+            {{>social-icons}}
         </div>
     </div>
 </div>
