--- a/src/client/ba/partials/layout/header.html
+++ b/src/client/ba/partials/layout/header.html
@@ -4,7 +4,7 @@
             <div class="col-xs-3 col-lg-3">
                 <div class="header__col">
                     <a href="/" class="header__brand">
-                        <img class="header__logo" src="/img/ba-logo-round.png" />
+                        <!--<img class="header__logo" src="/img/logo.white.jpg" />-->
                         <p class="">MisitioBA</p>
                     </a>
                 </div>
@@ -21,7 +21,9 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            <p class="header__quote">"Being out on the edge, with everything at risk, is where you learn and grow the most"<br>Jim Whittaker</p>
+            
+                <p class="header__quote">"An entrepreneur is someone who jumps off a cliff and builds a plane on the way down"<br>Reid Hoffman</p>
+            
         </div>
     </div>
 </div>
