--- a/src/client/ba/partials/layout/top.html
+++ b/src/client/ba/partials/layout/top.html
@@ -49,7 +49,8 @@
     <!-- Return to Top -->
     <a href="javascript:" id="return-to-top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
 
-    <div id="wrap" class="container">
+    <div id="wrap" >
+        <div class="class="container">
         <div class="container-fluid">
             {{> header}}
         </div>
