--- a/src/client/ba/partials/layout/top.html
+++ b/src/client/ba/partials/layout/top.html
@@ -14,11 +14,9 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     
 
-    <!--DISABLE_VENDOR-CSS-->
-
-    <!--/DISABLE_VENDOR-CSS-->
-
+    <!--DISABLE-VENDOR-CSS-->
     {{#printCSS}}{{/printCSS}}
+    <!--DISABLE-/VENDOR-CSS-->
 
 
 
@@ -50,7 +48,7 @@
     <a href="javascript:" id="return-to-top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
 
     <div id="wrap" >
-        <div class="class="container">
+        <div class="container">
         <div class="container-fluid">
             {{> header}}
         </div>
