--- a/src/client/ba/partials/layout/top.html
+++ b/src/client/ba/partials/layout/top.html
@@ -8,11 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{htmlTitle}}</title>
 
+    <meta http-equiv="Cache-control" content="public">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-    
+
 
     <!--DISABLE-VENDOR-CSS-->
     {{#printCSS}}{{/printCSS}}
@@ -47,9 +48,9 @@
     <!-- Return to Top -->
     <a href="javascript:" id="return-to-top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
 
-    <div id="wrap" >
+    <div id="wrap">
         <div class="container">
-        <div class="container-fluid">
-            {{> header}}
-        </div>
-        <div class="container content-wrapper">
+            <div class="container-fluid">
+                {{> header}}
+            </div>
+            <div class="container content-wrapper">
