--- a/src/client/ba/css/header.css
+++ b/src/client/ba/css/header.css
@@ -12,7 +12,7 @@ header {
 }
 
 .header__quote {
-    color: black;
+    color: oldlace;
     font-family: Nunito, sans-serif;
     font-size: 24px;
     text-align: center;
@@ -29,7 +29,7 @@ header {
 
 .header__text {
     display: inline-block;
-    color: black;
+    color: oldlace;
     font-family: Nunito, sans-serif;
     font-size: 14px;
     padding: 0px 15px 0px 10px;
@@ -53,7 +53,7 @@ header {
     margin: 0px;
     font-family: Nunito, sans-serif;
     font-size: 35px;
-    color: black;
+    color: oldlace;
     padding-top: 0px;
     padding-left: 20px;
     font-weight: 100;
@@ -94,7 +94,7 @@ header {
     }
 
     .header__text {
-        font-size: 25px;
+        font-size: 29px;
     }
 }
 
