--- a/src/client/ba/css/layout.css
+++ b/src/client/ba/css/layout.css
@@ -108,7 +108,8 @@ body {
     height: auto;
     margin: 0px auto -100px;
     padding: 0px 0px 100px;
-    background-image: url('/img/city.jpg');
+    /*background-image: url('/img/city.jpg');*/
+    background-image:url('https://source.unsplash.com/hzQL9YgYqG8/1600x900');
     background-size: cover;
 }
 
