--- a/src/client/ba/partials/layout/backoffice/bo-scripts.html
+++ b/src/client/ba/partials/layout/backoffice/bo-scripts.html
@@ -1,4 +1,4 @@
-{{>auto-reload}} {{>css-update-button}}
+{{>auto-reload}} 
 
 {{#each CDN}}
 <script type="text/javascript" src="{{this}}"></script>
