--- a/src/client/ba/css/content.css
+++ b/src/client/ba/css/content.css
@@ -28,10 +28,10 @@
     line-height: 29px;
     text-align: center;
     display: block;
-    color: black;
+    color: oldlace;
     font-family: Nunito, sans-serif;
     padding: 20px 0px 0px;
-    font-size: 25px;
+    font-size: 35px;
     font-weight: 900;
     margin: 0px auto 40px;
 }
