--- a/src/client/ba/css/header.css
+++ b/src/client/ba/css/header.css
@@ -47,7 +47,7 @@ header {
 }
 
 .header__brand p {
-    display: none;
+    display: block;
     line-height: 100px;
     vertical-align: top;
     margin: 0px;
@@ -55,8 +55,9 @@ header {
     font-size: 35px;
     color: oldlace;
     padding-top: 0px;
-    padding-left: 20px;
+    padding-left: 0px;
     font-weight: 100;
+    text-align: center;
 }
 
 @media only screen and (min-width: 320px) {
