--- a/src/client/ba/partials/layout/backoffice/bo-head.html
+++ b/src/client/ba/partials/layout/backoffice/bo-head.html
@@ -1,3 +1,10 @@
 <title>JA/MisitioBA | Clients</title>
-{{>common-metas}}
-{{>favicons}}
+{{>common-metas}} {{>favicons}}
+
+
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"> {{#printCSS}}{{/printCSS}}
+
+<link rel="stylesheet" href="/css/main.css" type="text/css" />
