--- a/src/client/ba/partials/layout/top.html
+++ b/src/client/ba/partials/layout/top.html
@@ -1,46 +1,7 @@
 <html class="gw">
 
 <head>
-    <meta charset="utf8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-    <meta name="description" content="JA/Misitioba is a personal digital brand that offers freelance software development with full stack javascript engineering in Barcelona and Paris." />
-    <meta name="author" content="Javier Arancibia" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>{{htmlTitle}}</title>
-
-    <meta http-equiv="Cache-control" content="public">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-
-
-    <!--DISABLE-VENDOR-CSS-->
-    {{#printCSS}}{{/printCSS}}
-    <!--DISABLE-/VENDOR-CSS-->
-
-
-
-    <!-- Favicons Generated with favicon.il.ly-->
-    <link rel="icon" sizes="16x16 32x32 48x48 64x64" href="/img/favicon.ico" />
-    <!--if IElink(rel='shortcut icon', href=self.root+'img/favicon.ico')
--->
-    <!-- Optional: Android & iPhone-->
-    <link rel="apple-touch-icon-precomposed" href="/img/favicon-152.png" />
-    <!-- Optional: IE10 Tile.-->
-    <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="favicon-144.png" />
-    <!-- Optional: ipads, androids, iphones, ...-->
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/img/favicon-152.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/favicon-144.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/img/favicon-120.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/favicon-114.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/favicon-72.png" />
-    <link rel="apple-touch-icon-precomposed" href="/img/favicon-57.png" />
-
-    <script type="text/javascript">
-        window.ROOT = "/";
-    </script>
+    {{>head}}
 </head>
 
 <body>
