--- a/src/client/ba/css/form-rt1.scss
+++ b/src/client/ba/css/form-rt1.scss
@@ -1,11 +1,40 @@
-a.form-rt1 {
+p.form-rt1>a.form-rt1 {
+    display: inline;
+    margin-left: 5px;
+}
+
+p.form-rt1 {
     text-align: center;
     line-height: 40px;
+    display: block;
     @media (min-width: 320px) {
         text-align: center;
     }
     @media (min-width: 480px) {
         text-align: center;
+        margin: 0 auto;
+    }
+    @media (min-width: 768px) {
+        max-width: 50%;
+    }
+    @media (min-width: 992px) {
+        text-align: center;
+    }
+    @media (min-width: 1200px) {
+        text-align: center;
+    }
+}
+
+a.form-rt1 {
+    text-align: center;
+    line-height: 40px;
+    display: block;
+    @media (min-width: 320px) {
+        text-align: center;
+    }
+    @media (min-width: 480px) {
+        text-align: center;
+        margin: 0 auto;
     }
     @media (min-width: 768px) {
         max-width: 50%;
@@ -72,7 +101,7 @@ form.form-rt1 {
 
 h2.form-rt1 {
     text-align: center;
-    font-size: -webkit-xxx-large;
+    font-size: xx-large;
     background: snow;
     padding: 20px 0px;
     @media (min-width: 320px) {
