--- a/src/client/ba/partials/layout/backoffice/bo-scripts.html
+++ b/src/client/ba/partials/layout/backoffice/bo-scripts.html
@@ -5,3 +5,5 @@
 {{/each}}
 
 <script type="text/javascript" src="/js/app.js"></script>
+
+<script type="text/javascript" src="https://cdn.jsdelivr.net/angular.ng-notify/0.8.0/ng-notify.min.js"></script>
