--- a/src/client/ba/partials/layout/head.html
+++ b/src/client/ba/partials/layout/head.html
@@ -15,7 +15,7 @@
     <!--DISABLE-VENDOR-CSS-->
     {{#printCSS}}{{/printCSS}}
     <!--DISABLE-/VENDOR-CSS-->
-
+<link rel="stylesheet" href="/css/main.css" type="text/css" />
 
 
     <!-- Favicons Generated with favicon.il.ly-->
