--- a/src/client/common/partials/auto-reload.html
+++ b/src/client/common/partials/auto-reload.html
@@ -1,89 +1,105 @@
 <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
 <script type="text/javascript">
-    window._autoReloadSignalName = "{{signalName}}" || "{{appName}}";
-</script>
-<script type="text/javascript">
     (function() {
-        /*global $*/
 
-        function has(str, word) {
-            return str.indexOf(word) != -1;
-        }
+        var guid = function() {
+            var nav = window.navigator;
+            var screen = window.screen;
+            var guid = nav.mimeTypes.length;
+            guid += nav.userAgent.replace(/\D+/g, '');
+            guid += nav.plugins.length;
+            guid += screen.height || '';
+            guid += screen.width || '';
+            guid += screen.pixelDepth || '';
+            return guid;
+        };
+
+        /*global $*/
+        var _autoReloadSignalName = "{{firebase.rootPath}}";
 
         function reloadStylesheets() {
-            var queryString = '?reload=' + new Date().getTime();
-            var counter = 0;
-            $('link[rel="stylesheet"]').each(function() {
-                if ((has(this.href, 'app.css') || has(this.href, '/raw/'))) {
-                    //console.debug('DEBUG: reloading file',this.href);
-                    this.href = this.href.replace(/\?.*|$/, queryString);
-                    counter++;
-                }
+            var allow = ['raw', 'main.css', 'app.css'];
+            var valid = (href) => allow.filter(v => href.indexOf(v) !== -1).length > 0;
+            $('link[rel="stylesheet"]').filter((a, b) => valid(b.href)).each(function() {
+                var html = $('<link>').attr('href', this.href).attr('rel', 'stylesheet').get(0).outerHTML;
+                $(this).replaceWith(html);
             });
-            console.debug('LIVE-SYNC: ' + counter + ' css files were reloaded. :)');
         }
+
 
         /*global firebase*/
         /*global localStorage*/
         var isDevEnv = function() {
             return window.location.origin.indexOf('c9users') !== -1;
-        }
+        };
         if (!isDevEnv()) return console.log('live-sync', 'not-a-dev-enviroment');
-        console.info('LIVE-SYNC:  signalName => '+_autoReloadSignalName);
-
-
+        console.info('LIVE-SYNC:  signalName => ' + _autoReloadSignalName);
+        
+        //THIS SHOULD BE ADDED AUTOMAGICALLY
         var config = {
-            apiKey: "AIzaSyB8riHvf4BwR7qOmAARsB3XRcRfueneUOs",
-            authDomain: "meeatful.firebaseapp.com",
-            databaseURL: "https://meeatful.firebaseio.com",
-            storageBucket: "meeatful.appspot.com",
-            messagingSenderId: "520596335619"
+            apiKey: "{{firebase.apiKey}}",
+            authDomain: "{{firebaseId.authDomain}}",
+            databaseURL: "{{firebase.databaseURL}}",
+            storageBucket: "{{firebase.storageBucket}}",
+            messagingSenderId:"{{firebase.messagingSenderId}}"
         };
         var app = firebase.initializeApp(config, 'live-reload');
-
-
         var database = app.database();
+        var rootRef = database.ref(_autoReloadSignalName);
 
-        var refPath = _autoReloadSignalName+'/signals' ///reload
+
+        //THIS HELPS GENERATOR TO IDENTIFY WHICH HOT HTML SEND
+        var currentPath = window.location.pathname || '_ROOT_';
+        var mapKeys = (o) => Object.keys(o || {}).map(k => o[k]);
+        rootRef.child('reports/currentPages').once('value', function(snap) {
+            if (!snap.val() || mapKeys(snap.val()).length == 0) {
+                rootRef.child('reports/currentPages/' + guid()).set(currentPath);
+                console.log('Sending ', currentPath);
+            }
+        });
+
+        //THIS IS HTML HOT RELOAD (Experimental)
+        rootRef.child('signals/hot_html/' + currentPath).on('value', function(snap) {
+            if (snap.val()) {
+                rootRef.child('signals/hot_html/' + currentPath).set(null);
+                setTimeout(function() {
+                    document.open('text/html');
+                    document.write(window.decodeURIComponent(snap.val()));
+                    document.close();
+                }, 50);
+            }
+        });
+
+        var refPath = _autoReloadSignalName + '/signals';
         var ref = database.ref(refPath);
         var counter = localStorage['livesync'] && localStorage['livesync'].toString() || 0;
 
 
+        //THIS IS IN CHARGE OF FULLRELOAD OR STYLESHEETS HOT RELOAD
         ref.on('value', function(snap) {
             if (snap.val() == null || snap.val() == undefined) return; //nothing happen yet
-
             var reload = snap.val().reload;
             var reload_css = snap.val().reload_css || false;
             var full_reload = snap.val().full_reload || false;
-
             if (reload_css && !full_reload) {
-                console.log('LIVE-SYNC:  reloading (CSS)');
                 reloadStylesheets();
                 return ref.update({
                     reload_css: false,
                     reload: null
                 });
             }
-
-            //console.log('new',snap.val());
-            //console.log('local',counter);
-
-            if (reload && reload.toString() != counter) {
-                localStorage['livesync'] = reload.toString();
-                console.log('LIVE-SYNC: reloading');
-
-                ref.update({
-                    full_reload: false,
-                    reload: null
-                });
-
-                window.location.reload();
-            }
             else {
-                console.log('LIVE-SYNC: waiting');
+                if (reload && reload.toString() != counter) {
+                    localStorage['livesync'] = reload.toString();
+                    console.log('LIVE-SYNC: reloading');
+                    ref.update({
+                        full_reload: false,
+                        reload: null
+                    });
+                    window.location.reload();
+                }
+                else {}
             }
         });
     })();
 </script>
-
-
