BA#BO dynamic table testing

--- a/src/client/ba/css/form-rt1.scss
+++ b/src/client/ba/css/form-rt1.scss
@@ -47,6 +47,11 @@ a.form-rt1 {
     }
 }
 
+button.form-rt1:disabled {
+    display: block;
+    background: cadetblue;
+}
+
 button.form-rt1 {
     display: block;
     margin: 0 auto;
