--- a/src/client/ba/css/main.scss
+++ b/src/client/ba/css/main.scss
@@ -1,5 +1,7 @@
 @import 'brand-rt1';
 @import 'form-rt1';
 @import 'panel-rt1';
+@import 'panel-rt5';
+@import 'paginator';
 
 @import '../../common/css/helpers.css';
