--- a/src/client/ba/res/includes/create-client-account.html
+++ b/src/client/ba/res/includes/create-client-account.html
@@ -8,7 +8,7 @@
             <label class="form-rt1">Password</label>
             <input class="form-rt1" ng-model="pwd" placeholder="Password" type="password" autocomplete="new-password">
             <p class="form-rt1">You have an account?<a class="form-rt1" href="/clients">Sign-in</a></p>
-            <button ng-disable="isBusy()" class="form-rt1" ng-click="submit()">Create</button>
+            <button ng-disabled="isBusy()" class="form-rt1" ng-click="submit()">Create</button>
         </form>
     </div>
 </div>
