--- a/src/client/ba/res/includes/client-dashboard.html
+++ b/src/client/ba/res/includes/client-dashboard.html
@@ -8,6 +8,7 @@
             <button class="panel-rt1" ng-click="viewBalance()">My balance</button>
             <button class="panel-rt1" ng-click="trackProjects()">Our Missions</button>
             <button class="panel-rt1" ng-click="trackTasks()">Track tasks</button>
+            <button class="panel-rt1" ng-click="manageUsers()" ng-show="showAdminOption()">Manage users</button>
             <button class="panel-rt1" ng-click="logout()">Logout</button>
         </div>
     </div>
