LIB#Fixing old projects

--- a/src/client/getabiker/partials/layout/gab.head.bo.html
+++ b/src/client/getabiker/partials/layout/gab.head.bo.html
@@ -11,7 +11,7 @@
 
 <!--VENDOR-CSS-->
 {{#each CSS}}
-    <link rel="stylesheet" href="{{../root}}src/css/common/{{this}}" type="text/css" />
+    <link rel="stylesheet" href="/common/css/{{this}}" type="text/css" />
 {{/each}}
 <!--/VENDOR-CSS-->
 
@@ -20,4 +20,4 @@
 <!--/BUNDLE_JS_1-->
 
 
-<link rel="stylesheet" href="{{root}}css/app.css" type="text/css" />
+<link rel="stylesheet" href="/css/app.css" type="text/css" />
