--- a/src/client/getabiker/partials/layout/gab.head.html
+++ b/src/client/getabiker/partials/layout/gab.head.html
@@ -10,8 +10,8 @@
 {{/each}}
 
 <!--VENDOR-CSS-->
-<link rel="stylesheet" href="{{root}}src/css/common/helpers.css" type="text/css" />
-<link rel="stylesheet" href="{{root}}src/css/common/boostrap-md.css" type="text/css" />
+<link rel="stylesheet" href="/common/css/helpers.css" type="text/css" />
+<link rel="stylesheet" href="/common/css/boostrap-md.css" type="text/css" />
 <!--/VENDOR-CSS-->
 
 <!--BUNDLE_JS_1-->
