--- a/src/client/getabiker/res/includes/gab_profile.html
+++ b/src/client/getabiker/res/includes/gab_profile.html
@@ -115,19 +115,19 @@
 
                         <ol class="nav">
                             <li class="margin-left-one">
-                                <span class="badge">{{item.stats.completed}}</span>
+                                <span class="badge">{[{item.stats.completed}]}</span>
                                 Orders Completed 
                             </li>
                             <li class="margin-left-one">
-                                <span class="badge">{{item.stats.positiveReviews}}</span>    
+                                <span class="badge">{[{item.stats.positiveReviews}]}</span>    
                                 Positive reviews 
                             </li>
                             <li class="margin-left-one">
-                                <span class="badge">{{item.stats.neutralReviews}}</span>    
+                                <span class="badge">{[{item.stats.neutralReviews}]}</span>    
                                 Neutral reviews 
                             </li>
                             <li class="margin-left-one">
-                                <span class="badge">{{item.stats.negativeReviews}}</span>    
+                                <span class="badge">{[{item.stats.negativeReviews}]}</span>    
                                     Negative reviews 
                             </li>
                         </ol>
