--- a/src/client/getabiker/res/includes/common/gab.popup.ok.html
+++ b/src/client/getabiker/res/includes/common/gab.popup.ok.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3 class="modal-title">{{data.title||'Message'}}</h3>
+    <h3 class="modal-title">{[{data.title||'Message'}]}</h3>
 </div>
 <div class="modal-body">
 	<out html-content html="message||''"></out>
