--- a/src/client/getabiker/res/includes/gab_dashboard.html
+++ b/src/client/getabiker/res/includes/gab_dashboard.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-sm-12 padding-none">
             <div class="panel">
-                <h5>Welcome {{session().nickName || session().fullName || session().email}}</h5>
+                <h5>Welcome {[{session().nickName || session().fullName || session().email}]}</h5>
             </div>
         </div>
     </div>
@@ -81,7 +81,7 @@
                 <div class="row margin-top-one">
                     <div class="col-xs-12 ">
                         <label for="type">When*</label>
-                        <input pikaday="_order.when" class="form-control" theme="diags" ng-attr-min={{datepicker.minDate}} ng-attr-max={{datepicker.maxDate}} placeholder="departure date">
+                        <input pikaday="_order.when" class="form-control" theme="diags" ng-attr-min={[{datepicker.minDate}]} ng-attr-max={[{datepicker.maxDate}]} placeholder="departure date">
                         <div class="alert  alert-info" ng-show="!validations.when">
                             <strong>Heads up!</strong>
                             <span>The minimum booking time needs to be one hour ahead the current time.</span>
