BA#Update-bg-video

--- a/src/client/ba/css/layout.css
+++ b/src/client/ba/css/layout.css
@@ -109,7 +109,7 @@ body {
     margin: 0px auto -100px;
     padding: 0px 0px 100px;
     /*background-image: url('/img/city.jpg');*/
-    background-image:url('https://source.unsplash.com/hzQL9YgYqG8/1600x900');
+    /*background-image:url('https://source.unsplash.com/hzQL9YgYqG8/1600x900');*/
     background-size: cover;
 }
 
