--- a/src/client/ba/partials/layout/head.html
+++ b/src/client/ba/partials/layout/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-    <meta name="description" content="JA/Misitioba is a personal digital brand that offers freelance software development with full stack javascript engineering in Barcelona and Paris." />
+    <meta name="description" content="MisitioBA is a personal digital brand who provides freelance full stack javascript engineering in Paris and Barcelona." />
     <meta name="author" content="Javier Arancibia" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{htmlTitle}}</title>
