--- a/src/client/ba/partials/layout/top.html
+++ b/src/client/ba/partials/layout/top.html
@@ -9,7 +9,12 @@
     <!-- Return to Top -->
     <a href="javascript:" id="return-to-top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
 
-    <div id="wrap">
+    <div id="wrap"
+    
+    data-vide-bg="mp4: /files/video, poster: /files/poster"
+    data-vide-options="posterType: jpg, loop: true, muted: false, position: 0% 0%"
+    
+    >
         <div class="container">
             <div class="container-fluid">
                 {{> header}}
