--- a/src/client/ba/partials/layout/header.html
+++ b/src/client/ba/partials/layout/header.html
@@ -11,7 +11,10 @@
             </div>
             <div class="col-xs-9 col-lg-9">
                 <p class="header__text">
-                    freelance <span class="header__text__alternate">[ fullstack javascript ]</span> web development
+                    Paris - Barcelona
+                    <span class="header__text__alternate">[ javascript ]</span>
+                    web development. 
+                    
                 </p>
             </div>
         </div>
@@ -19,6 +22,7 @@
     </div>
 </header>
 <div class="container">
+    <!--
     <div class="row">
         <div class="col-lg-12">
             
@@ -26,4 +30,5 @@
             
         </div>
     </div>
+    -->
 </div>
