--- a/src/client/ba/css/main.scss
+++ b/src/client/ba/css/main.scss
@@ -3,5 +3,9 @@
 @import 'panel-rt1';
 @import 'panel-rt5';
 @import 'paginator';
+@import 'tags';
+@import 'text';
+@import 'social';
+@import 'layout';
 
 @import '../../common/css/helpers.css';
