--- a/src/client/ba/partials/layout/scripts.html
+++ b/src/client/ba/partials/layout/scripts.html
@@ -13,7 +13,7 @@
     ga('send', 'pageview');
 </script>
 
-{{#if logged}} {{else}} {{>auto-reload}} {{>css-update-button}} {{/if}}
+{{#if logged}} {{else}} {{>auto-reload}}  {{/if}}
 
 
 
