--- a/src/client/ba/partials/layout/header.html
+++ b/src/client/ba/partials/layout/header.html
@@ -12,23 +12,12 @@
             <div class="col-xs-9 col-lg-9">
                 <p class="header__text">
                     Paris - Barcelona
-                    <span class="header__text__alternate">[ javascript ]</span>
-                    web development. 
-                    
+                    <span class="header__text__alternate">[ javascript ]</span> web development.
+
                 </p>
             </div>
         </div>
 
     </div>
 </header>
-<div class="container">
-    <!--
-    <div class="row">
-        <div class="col-lg-12">
-            
-                <p class="header__quote">"An entrepreneur is someone who jumps off a cliff and builds a plane on the way down"<br>Reid Hoffman</p>
-            
-        </div>
-    </div>
-    -->
-</div>
+
